# career-webapp

./: README.md  app.py  pyproject.toml
templates/: footer.html  home.html  jobs.html  nav.html
